@@ -1,7 +1,7 @@
 Begin4
 Title:          rpmrebuild
-Version:        2.17
-Entered-date:   2023-01-10
+Version:        2.18
+Entered-date:   2023-02-05
 Description:    rpmrebuild creates spec files used by the Red Hat Package Manager
                 in building RPM packages.  It uses the information it can
                 determine (from the rpm database) to fill in the proper spec file fields. 
