@@ -14,6 +14,7 @@
     <h1>CHANGELOG</h1><!-- AS-TOC_BEGIN{ -->
     <h2>Table of Contents</h2>
     <ol>
+      <li><a href="#v2.18">2.18</a></li>
       <li><a href="#v2.17">2.17</a></li>
       <li><a href="#v2.16-1">2.16-1</a></li>
       <li><a href="#v2.15-1">2.15-1</a></li>
@@ -71,6 +72,13 @@
       <li><a href="#v0.2">0.2</a></li>
       <li><a href="#v0.1">0.1</a></li>
     </ol><!-- AS-TOC_END} -->
+    <hr />
+    Sun Feb 05 2023 Eric Gerbier &lt;<a href="mailto:eric.gerbier@tutanota.com">eric.gerbier@tutanota.com</a>&gt; <a name="v2.18" id="v2.18">2.18</a>
+    <ul>
+      <li>correction de --cap-from-fs avec libcap-2.32 (xujing)</li>
+      <li>ajout de  %defattr pour conserver les permissions, uid et gid (xujing)</li>
+      <li>correction de l'option -k : conserve uid et gid (xujing)</li>
+    </ul>
     <hr />
     Tue Jan 10 2023 Eric Gerbier &lt;<a href="mailto:eric.gerbier@tutanota.com">eric.gerbier@tutanota.com</a>&gt; <a name="v2.17" id="v2.17">2.17</a>
     <ul>
