@@ -126,8 +126,8 @@
       </tr>
       <tr>
         <td>stable</td>
-        <td>2.17-1</td>
-        <td>2023-01-10</td>
+        <td>2.18-1</td>
+        <td>2023-02-05</td>
       </tr>
       <tr>
         <td>developpement</td>
@@ -143,7 +143,7 @@
       <a href="mailto:eric.gerbier@tutanota.com">Eric Gerbier</a>
     </address><br />
     thanks to <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=57523" width="88" height="31" alt="SourceForge Logo" /></a> to host this project<br />
-    page changed on 2023-01-10<br />
+    page changed on 2023-02-05<br />
     <p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a></p>
   </div>
 </body>
