@@ -13,6 +13,7 @@
   <div>
     <h1>news</h1>
     <ul>
+      <li>2023-02-05 : release 2.18, correction de bugs (merci xujing)</li>
       <li>2023-01-10 : release 2.17, correction de bugs, tests unitaires, nouveau plugin exclude_file</li>
       <li>2021-01-17 : release 2.16, correction de bugs (args, filesystem, multi-install)</li>
       <li>2020-02-21 : release 2.15-1, correction de bugs, meilleurs diagnostics</li>
