@@ -1,3 +1,4 @@
+* 2023-02-05 : release 2.18, bugs fix (thanks xujing)
 * 2023-01-10 : release 2.17, bugs fix, args and plugin tests, new plugin exclude_file
 * 2021-01-17 : release 2.16, bugs fix (args, filesystem, multi-install)
 * 2020-02-21 : release 2.15, bugs fix, better diagnostics on errors
